--- a/twitter.html
+++ b/twitter.html
@@ -3,8 +3,8 @@
 <meta name="twitter:image" content="" />
 <meta name="twitter:card" content="player" />
 <meta name="twitter:title" content="Dot" />
-<meta name="twitter:description" content="Click to paint inside Twitter (web only)" />
-<meta name="twitter:player" content="https://dot.fan" />
+<meta name="twitter:description" content="View leaderboard inside Twitter (web only)" />
+<meta name="twitter:player" content="https://dot.fan/streaks" />
 <meta name="twitter:player:width" content="360" />
 <meta name="twitter:player:height" content="560" />
 <title>Title</title>
